--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -63,3 +63,5 @@ table.dataTable.no-footer {
 span.select2-container {
     z-index:10050 !important;
 }
+
+.bootstrap-timepicker-widget table td a {padding: 0px !important;}
